Closed
Bug 1234744
Opened 9 years ago
Closed 9 years ago
Fix unified build error in ImageBitmap.h
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
mozilla46
Tracking | Status | |
---|---|---|
firefox46 | --- | fixed |
People
(Reporter: TYLin, Assigned: TYLin)
References
Details
Attachments
(1 file)
I rebased my wip patches in bug 591737, and encounter the following build error.
0:26.07 In file included from ./OffscreenCanvasBinding.cpp:9:
0:26.07 ../../dist/include/mozilla/dom/ImageBitmap.h:102:29: error: no type named 'DrawTarget' in namespace 'mozilla::gfx'
0:26.07 PrepareForDrawTarget(gfx::DrawTarget* aTarget);
0:26.07 ~~~~~^
0:26.07 1 error generated.
Assignee | ||
Comment 1•9 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/28931/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/28931/
Attachment #8701321 -
Flags: review?(roc)
Comment on attachment 8701321 [details]
MozReview Request: Bug 1234744 - Fix build errors in ImageBitmap.h. r=roc
https://reviewboard.mozilla.org/r/28931/#review25801
Attachment #8701321 -
Flags: review?(roc) → review+
Comment 4•9 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox46:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
You need to log in
before you can comment on or make changes to this bug.
Description
•