Bug 1234744 - Fix build errors in ImageBitmap.h. r=roc